--- a/Q46-Q50.md
+++ b/Q46-Q50.md
@@ -1,1 +1,185 @@
 
+### Q46 如何对如下数组的下标进行重排序？
+
+原始数组：
+```
+Array (
+
+[2] => Object
+    (
+        [title] => Section
+        [linked] => 1
+    )
+
+[1] => Object
+    (
+        [title] => Sub-Section
+        [linked] => 1
+    )
+
+[0] => Object
+    (
+        [title] => Sub-Sub-Section
+        [linked] => 
+    )
+
+)
+```
+
+重排序后的数组：
+```
+Array (
+
+[1] => Object
+    (
+        [title] => Section
+        [linked] => 1
+    )
+
+[2] => Object
+    (
+        [title] => Sub-Section
+        [linked] => 1
+    )
+
+[3] => Object
+    (
+        [title] => Sub-Sub-Section
+        [linked] => 
+    )
+
+)
+```
+答案:
+```php
+$iOne = array_combine(range(1, count($arr)), array_values($arr));
+```
+
+### Q47 如何定位并分析慢SQL语句？
+分析用 explain、show profile等等，大家可以搜一下，挺实用的
+
+### Q48 使用ssh免密登陆服务器的原理是什么？
+名词解释
+
+`对称加密`：
+
+数据的加密与解密，使用的是同样的密钥。（不存在公钥、私钥的概念）
+
+`非对称加密`
+
+公钥与私钥是一对。 使用公钥加密的数据，要使用私钥解密。 使用私钥加密的数据，要使用公钥解密。
+
+`RSA加密算法`
+
+RSA算法是非对称加密的一种。SSH使用的RSA进行的登录验证。
+
+早期的数据传输
+
+早期计算机之间的连接，都是使用明文传输的方式，比如ftp协议、telnet协议等等。 这种方式很不安全，很容易被截获，从而获取用户的登录名和密码。
+
+`SSH来了`
+
+为了解决安全问题，SSH横空出世。SSH传输过程中，数据全程加密，并使用两种验证方式保证传输的安全。
+
+1、基于密码的安全验证。
+
+当用户要登陆一台远程主机，以登陆srb.w3cs.site为例。
+
+用户输入
+
+ssh root@srb.w3cs.site
+但是，如何保证用户登陆的就是 srb.w3cs.site主机呢，如何保证不是其他主机伪装的呢？
+
+当用户第一次登陆的时候，用户会收到这样的提示：
+
+`$ ssh root@srb.w3cs.site`
+
+The authenticity of host ‘host (12.18.429.21)’ can’t be established.
+
+RSA key fingerprint is 98:2e:d7:e0:de:9f:ac:67:28:c2:42:2d:37:16:58:4d.
+
+Are you sure you want to continue connecting (yes/no)?
+服务器将自己的公钥指纹发送给想连接的用户主机，告诉用户主机
+
+这是我的指纹，你看看对吗？ 对的话你就输入yes连接,不对的话你就输入no放弃连接。
+这样就保证了数据连接的安全性。 如果点了yes,这台主机的公钥就被放在了用户的.ssh文件夹下的known_hosts文件中，下次就不用重复确认了。
+
+上面，主机接受了srb.w3cs.site的公钥。
+
+接下来：
+
+用户输入登陆密码，利用接受的服务器公钥来加密密码，将加密的密码发送给服务器，
+服务器用自己的私钥，解密密码。如果密码正确，允许登陆。否则，拒绝登陆。
+2、免密登录
+
+1、用户将自己的公钥放在服务器上。
+
+2、服务器向客户机发送一段随机字符串。
+
+3、客户机利用自己的私钥对随机字符串进行加密，发送给服务器。
+
+4、服务器利用事先存储的公钥解密，解密出来正确，允许登陆，否则，拒绝登陆。
+
+### Q49 总结一下对多维数组进行排序的方法。
+现有一个数组，如下：
+
+```
+$a=[
+    ['key1'=>940,'key2'=>'blah'],
+    ['key1'=>23,'key2'=>'this'],
+    ['key1'=>894,'key2'=>'that']
+];
+```
+
+我想按照元素中key1的键值进行升序排序,得到：
+```
+$a=[
+    ['key1'=>23,'key2'=>'this'],
+    ['key1'=>894,'key2'=>'that'],
+    ['key1'=>940,'key2'=>'blah']
+];
+```
+
+解决：使用usort()自定义排序。
+```
+<?php
+$a=[
+    ['key1'=>940,'key2'=>'blah'],
+    ['key1'=>23,'key2'=>'this'],
+    ['key1'=>894,'key2'=>'that']
+];
+
+function asc_number_sort($x,$y){
+    if($x['key1']>$y['key1']){
+        return true;
+    }elseif ($x['key1']<$y['key1']) {
+        return false;
+    }else{
+        return 0;
+    }
+}
+usort($a,'asc_number_sort');
+print_r($a);
+```
+##### usort()等的说明
+
+PHP 会把内层数组中的元素不断地发送给这个函数，从而将其排序。它必须接收两个参数，并且返回一个值表示哪个参数应该排在前面。
+
+负数或者false意味着第一个参数应该排在第二个参数前面。 正数或者 true 则表示第二个参数应该排在前面。 如果值为 0则表示两个参数值相等。
+
+uasort()会保留数组元素的key
+uksort()会基于key进行排序
+
+### Q50 isset()、empty()、is_null的区别
+* isset()
+
+检查一个变量是否已声明，且值不为null。 换句话说：只能在变量值不是null的时候才返回true。 没有声明变量，或变量值为null，都会返回false。
+
+* empty()
+
+empty()用来检测一个变量是否为空。 也就是一个变量是false、空字符串、空数组、''，NULL、以及被unset()后，才返回false。
+
+* is_null
+
+is_null是isset()的反函数。
+
