--- a/Q51-55.md
+++ b/Q51-55.md
@@ -1,1 +1,143 @@
 
+### Q51 超实用-如何catch 住 php 的fatal error，并记录到error_log里面？
+
+两个函数
+
+* register_shutdown_function()
+
+* register_shutdown_function($callback)
+
+在脚本正常退出或者用户调用exit等方法时，才会被调用。 相当于每调用register_shutdown_function()，就把你要注册进去的function放进【假装是队列吧】，等到脚本正常退出或显示调用exit时，再把注册进去的function拉出来执行.
+
+注意:正常退出的脚本才会触发该函数， 而当脚本发生错误时， 是不会被触发的。
+
+error_get_last()
+
+error_get_last() 函数获取最后发生的错误。
+
+该函数以数组的形式返回最后发生的错误。
+
+返回的数组包含 4 个键和值：
+
+[type] - 错误类型 [message] - 错误消息 [file] - 发生错误所在的文件 [line] - 发生错误所在的行
+
+使用方法
+```
+<?php
+register_shutdown_function( "fatal_handler" );
+
+function fatal_handler() {
+  $errfile = "unknown file";
+  $errstr  = "shutdown";
+  $errno   = E_CORE_ERROR;
+  $errline = 0;
+
+  $error = error_get_last();
+
+  if( $error !== NULL) {
+    $errno   = $error["type"];
+    $errfile = $error["file"];
+    $errline = $error["line"];
+    $errstr  = $error["message"];
+    Log::error("错误信息***");
+  }
+}
+```
+
+### Q52 output buffering的原理？以及ob_*的几个函数的应用？
+
+[day52]PHP中output buffering的原理，以及相关的应用
+
+php缓存过程
+
+在请求一个PHP的过程中，实际上经过三个缓存: 
+1. 程序缓存 
+2. ob缓存 
+3. 浏览器缓存.
+
+开启ob的两个方法
+
+1.在php.ini 配置 ;output_buffering = 4096 这里去掉;号即可
+2 在php页面中使用 ob_start();
+通过php.ini 打开的，则作用于所有的php页面 。使用ob_start()打开则只作用于该页面
+
+ob缓存的知识点
+
+在服务中，如果我们开启了ob缓存，则echo数据首先放入到ob中
+当PHP页面执行到最后，则会把ob缓存的数据(如果有的话)， 强制刷新到程序缓存，然后通过apache对数据封装成http响应包，返 回给浏览器
+如果没有ob,所有的数据直接放入程序缓存。 header信息不管你是否开启ob,总是放入到程序缓存。
+ob相关的函数
+
+ob_start($callback)
+
+//在当前页面中开启ob,注意callback
+ob_start($callback);
+ob_get_contents()
+
+//获取当前ob缓存中的内容
+ob_get_contents()
+ob_get_clean()
+
+//获取当前ob缓存中的内容，并且清空当前的ob缓存
+ob_get_clean()
+ob_flush()
+
+//将ob缓存中的内容，刷到程序缓存中,但并没有关闭ob缓存
+ob_flush()
+ob_end_flush()
+
+//关闭ob缓存，并将数据刷回到程序缓存中
+ob_end_flush()
+ob_clean()
+
+//将ob缓存中的内容清空
+ob_clean()
+ob_end_clean()
+
+//将ob缓存中的数据清空，并且关闭ob缓存
+ob_end_clean()
+注意ob_start($callback)的回调
+```
+<?php
+ob_start("callback_func");
+function callback_func($str){
+	return "callback".$str;
+}
+echo "123";//输出：callback123
+```
+应用场景
+
+在header()发送之前的报错
+
+出错代码
+```
+<?php
+echo "before_header";
+header("Content-type:text/html;charset=utf-8");
+echo "after_header";
+输出：
+
+Warning: Cannot modify header information - headers already sent by (output started at /Users/shuchao/Desktop/test.php:2) in /Users/shuchao/Desktop/test.php on line 3
+```
+解决办法
+
+在发送header前开启ob,则所有的echo内容都会到ob里面，从而解决错误。
+```
+<?php
+ob_start();
+echo "before_header\n";
+header("Content-type:text/html;charset=utf-8");
+echo "after_header\n";
+```
+输出
+```
+before_header
+after_header
+```
+
+### Q53 set_error_handler()、set_exception_handler(）的应用场景是什么？如何与register_shutdown_function()结合起来使用？
+
+### Q54 如何消除代码中众多的if...else...，实现代码的解耦？
+可以使用策略模式来进行解耦消除
+
+### Q55 php://input  $http_raw_post_data $_POST 这三个有什么不同，怎么使用才能正确拿到提交过来的数据
