--- a/Q51-55.md
+++ b/Q51-55.md
@@ -141,3 +141,18 @@ after_header
 可以使用策略模式来进行解耦消除
 
 ### Q55 php://input  $http_raw_post_data $_POST 这三个有什么不同，怎么使用才能正确拿到提交过来的数据
+[day 55] $_POST php://input  $HTTP_RAW_POST_DATA的区别
+* $_POST能获取Content-Type为multipart/form-data类型,application/x-www-form-urlencoded类型(通过form表单提交)的数据，除此以外的，比如text/xml类型无法获取
+* php://input  $HTTP_RAW_POST_DATA均不能读取Content-Type为multipart/form-data类型的数据，但是他可以读取除此以外所有通过post方式传过来的数据，比如Content-Type是text/xml类型数据
+* php7中$HTTP_RAW_POST_DATA这个变量已经废除，使用php://input即可获取数据。并且php://input占用内存更少，并且不需要修改php.ini的配置。$HTTP_RAW_POST_DATA启用的话需要修改php.ini的配置.
+* 数据类型。$_POST是数组，php://input得到的内容是字串
+```
+$data = file_get_contents('php://input'); //$data的值是 a=1&b=2 这样的字串
+print_r(urldecode($data));//一般需要要解下码
+$_POST数据类型是数组:
+array(2) {
+  ["a"]=> string(1) "1"
+  ["b"]=> string(1) "2"
+}
+$_POST可以转化为 php://input 得到的字串类型， 通过 http_build_query
+```
