--- a/Q56-60.md
+++ b/Q56-60.md
@@ -1,1 +1,81 @@
 
+### Q56 php的curl_exec方法请求远程数据接口的时候如何捕获错误，比如超时，比如非200的错误。错误了之后，如何重试
+
+php的curl_exec方法请求远程数据接口的时候如何捕获错误，比如超时，比如非200的错误。错误了之后，如何重试
+代码如下:
+```
+//假设已经获取了句柄$ch
+$response = curl_exec($ch);
+$http_info = curl_getinfo($ch);
+$curl_error = curl_errno($ch);
+//CURL错误 如果无错误，$curl_error=0
+if($curl_error) {
+    var_dump($curl_error);//打印error码
+    curl_errno($ch);//重新请求一次
+}else{
+    //HTTP错误
+    if ($http_info['http_code'] != 200) {
+        var_dump($http_info['http_code']);//打印非200的错误码
+        curl_errno($ch);//重新请求一次
+    }
+}
+```
+
+### Q57 位运算在php中有哪些应用场景？
+
+1、php的json_encode()函数，$option参数就是使用位运算
+
+json_encode($data, JSON_PRETTY_PRINT | JSON_UNESCAPED_UNICODE);
+我有时候设计某些参数就是使用这种方式。
+
+2、权限设计
+
+把不同的权限分配到不同的因子数上，例如2 4 8 16 ...
+
+然后用户的权限就可以是 2 | 8
+
+存储的时候只用存一个数字
+
+检查是否具备对应的权限就用位运算来检查
+```
+<?php
+// 权限因子: 2 4 8 16 32
+$p = 2 | 8 | 32;  // 用户权限
+$c = 2;           // 用于检查的权限
+
+if (($p & $c) === $c) {
+    echo '有权限';
+} else {
+    echo '没权限';
+}
+```
+
+### Q58 php7中添加了严格模式，如何开启严格模式？这个设定会产生哪些影响？严格模式如何兼容以前使用默认模式开发的第三方扩展？
+
+php7的严格模式的开启方式:
+文件最顶部 `declare(strict_type=1);` 
+严格模式会作用于函数调用和返回。比如函数要求返回整数，在严格模式下如果返回了字串的话，会报Fatal error。 strict_types指令只影响指定使用的文件，不会影响被它包含（通过include等方式）进来的其他文件(为了向下兼容)。这是因为一些第三方库还是用的默认模式，如果一刀切的话，那么旧的库全部都需要修改，通过include的这种兼容方式引入的话，就可以不用修改任何代码即可使用。从这里看出php7的兼容性很好。
+
+### Q59 php7的标量类型声明是什么意思?使用该语法会对程序产生什么影响
+
+标量声明就是强制规定了函数的变量类型和返回类型，如果开启严格模式的话，传入和传出的类型不符合的话，会Fatal error错误。
+```
+function sum(int $a, int $b) {
+    return $a + $b;
+}
+
+var_dump(sum(1, 2));
+var_dump(sum(1.5, 2.5)); //Fatal error
+```
+目前支持的类型有 int，float，string, bool, Closure, 类实例。 这样做的好处是如果类型不正确的话，不会进行默认类型转化，有益于类型安全和及时排插问题。
+
+### Q60 
+现在有2个数组：
+$arr1=[1=>"cat",2=>"dog",3=>"horse"];
+$arr2=[1=>"elephant",2=>"camel"];
+
+通过这两个数组，我想获得如下形式的数组：
+
+[1=>"elephant",2=>"camel",3=>"horse"]
+
+如何获得呢？
