--- a/Q61-65.md
+++ b/Q61-65.md
@@ -1,1 +1,25 @@
 
+### Q61 如何用PHP+Redis实现任务队列？
+
+
+### Q62 如何知道一个月的最后一天
+
+
+### Q63 比较2个字串是否相等的有几种方法?
+
+### Q64 nginx的运行原理是什么？以及一些优化方案？
+
+### Q65 str_replace()的理解
+```
+<?php
+$find=["{","\"{"];
+$replace=["(",""];
+$string="\"{hello{123}hello}\"";
+echo str_replace($find,$replace,$string);
+```
+
+输出结果如下：
+```
+"(hello(123}hello}"
+```
+\"{为什么没有被""替换？如何替换？
